--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -76,7 +76,7 @@ body {
   position: relative;
 }
 
-.logo-box {
+.header__logo-box {
   position: absolute;
   /* where does 40px starts? ref is parent element with position set to relative */
   /*  - header is parent element */
@@ -86,13 +86,13 @@ body {
   left: 4rem;
 }
 
-.logo {
+.header__logo {
   /* height: 35px; */
   height: 3.5rem;
   /* width will scale accordingly by browser (could do vice versa) */
 }
 
-.text-box {
+.header__text-box {
   position: absolute;
   /* top and left are in relation to parent element */
   top: 40%;
@@ -113,7 +113,7 @@ body {
   margin-bottom: 6rem;
 }
 
-.heading-primary-main {
+.heading-primary--main {
   /* block width occupies entire line avl and create line breaks */
   /* span is inline element by default */
   display: block;
@@ -130,7 +130,7 @@ body {
   /* animation-iteration-count: 3; */
 }
 
-.heading-primary-sub {
+.heading-primary--sub {
   display: block;
   /* font-size: 20px; */
   font-size: 2rem;
@@ -184,7 +184,7 @@ body {
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
 }
 
-.btn-white {
+.btn--white {
   background-color: #fff;
   color: #777;
 }
@@ -212,7 +212,7 @@ body {
   transition: all 0.4s;
 }
 
-.btn-white::after {
+.btn--white::after {
   background-color: #fff;
 }
 
@@ -224,7 +224,7 @@ body {
   opacity: 0;
 }
 
-.btn-animated {
+.btn--animated {
   /* .75s is a delay */
   animation: moveInBottom 0.5s ease-out 0.75s;
   /* automatically apply 0% styles before animation starts */
