--- a/Trillo/starter/sass/_base.scss
+++ b/Trillo/starter/sass/_base.scss
@@ -39,6 +39,9 @@ CSS VARIABLES
   --color-grey-dark-1: #333;
   --color-grey-dark-2: #777;
   --color-grey-dark-3: #999;
+
+  // vars work for more than colors
+  --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
 }
 
 * {
